笔记/k8s/postgresql/ui/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https-middleware
  namespace: postgres-operator
spec:
  redirectScheme:
    scheme: https
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: postgres
  namespace: postgres-operator
spec:
  entryPoints:
    - web
    - websecure 
  tls:
    secretName: ingress-tls
  routes:
    - match: Host(`postgres-operator-ui.cuiliangblog.cn`)
      kind: Rule
      services:
        - name: postgres-operator-ui
          port: 80
      middlewares:
        - name: redirect-https-middleware
